# is-rock-alive

./: .dockerignore  .gitignore  CLAUDE.md  README.md  ROADMAP.md  docker-compose.yml  latest_dump.py  main.py  musicbrainz_stream.py  pipeline.py  pyproject.toml
.dlt/: config.toml
dbt/: dbt_project.yml
dbt/models/staging/: __sources.yml  stg_event.sql
docker/load-dump/: Dockerfile  requirements.txt
scripts/: .dockerignore  Dockerfile  bulk_load.py  load_dump.py
src/is_rock_alive/ingestion/: cleanup.py  download.py  latest_dump.py  pipeline.py  stream.py
terraform/: artifact_registry.tf  bigquery.tf  gcs.tf  iam.tf  main.tf  outputs.tf  variables.tf
tests/: test_load_dump.py
tests/ingestion/: test_cleanup.py  test_download.py  test_latest_dump.py  test_stream.py
