[project]
name = "is-rock-alive"
version = "0.1.0"
description = "Data engineering project tracking rock music activity using MusicBrainz data."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dlt[parquet]>=1.22.2",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/is_rock_alive"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require network access (deselect with '-m \"not integration\"')",
]
